--- a/USTHWeather/app/src/main/res/values/strings.xml
+++ b/USTHWeather/app/src/main/res/values/strings.xml
@@ -1,5 +1,5 @@
 <resources>
-    <string name="app_name">USTH Weather</string>
+    <string name="app_name" translatable="false">USTH Weather</string>
     <!-- TODO: Remove or change this placeholder text -->
     <string name="Monday">MON</string>
     <string name="Tuesday">TUE</string>
@@ -14,4 +14,5 @@
     <string name="mist">mist</string>
     <string name="rain">rain</string>
     <string name="humidity">humidity</string>
+
 </resources>
